--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <h1>Hello world</h1>
-
+    <section class="cart-produits">
+      <div class="produit">
+        <h3 class="title">Brocoli</h3>
+        <p class="stock">en stock</p>
+        <span class="prix">CHF 4.35</span>
+      </div>
+      <button>Passer à la caisse</button>
+    </section>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
