--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,25 @@
     <title>Exercice hebdomadaire 8</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello world</h1>
     <section class="cart-produits">
-      <div class="produit">
-        <h3 class="title">Brocoli</h3>
-        <p class="stock">en stock</p>
-        <span class="prix">CHF 4.35</span>
-      </div>
+     
+      <article class="item">
+        <img src="img/Brocoli.jpg" alt="Brocoli" />
+        <div class="produit">
+          <h3 class="title">Brocoli</h3>
+          <p class="stock">en stock</p>
+          </div>
+          <div class="prix">
+          <span class="prix">CHF 4.35</span>
+          </div>
+        </div>
+      </article>
+
       <button>Passer à la caisse</button>
     </section>
     <script src="js/main.js" type="module"></script>
