ajustement et ajout des produits

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,41 @@
         </div>
       </article>
 
+       <article class="item">
+        <img src="img/Gruyere.jpg" alt="Gruyere" />
+        <div class="produit">
+          <h3 class="title">Le Gruyère</h3>
+          <p class="stock">en stock</p>
+          </div>
+          <div class="prix">
+          <span class="prix">CHF 11.00</span>
+          </div>
+        </div>
+      </article>
+       <article class="item">
+        <img src="img/Carottes-mini.jpg" alt="Carottes" />
+        <div class="produit">
+          <h3 class="title">Carottes mini</h3>
+          <p class="stock">plus que 1 en stock</p>
+          </div>
+          <div class="prix">
+          <span class="prix">CHF 5.20</span>
+          </div>
+        </div>
+      </article>
+
+       <article class="item">
+        <img src="img/Chipspaprika.jpg" alt="Chips" />
+        <div class="produit">
+          <h3 class="title">Chips paprika Zweifel</h3>
+          <p class="stock">en stock</p>
+          </div>
+          <div class="prix">
+          <span class="prix">CHF 5.95</span>
+          </div>
+        </div>
+      </article>
+
       <button>Passer à la caisse</button>
     </section>
     <script src="js/main.js" type="module"></script>
